--- a/files/sysctl.conf
+++ b/files/sysctl.conf
@@ -1,16 +1,20 @@
 # /etc/sysctl.conf
 
-# BBR
+# Core, TCP
 net.core.default_qdisc = fq_codel
 net.core.netdev_max_backlog = 32768
 net.core.optmem_max = 65536
 net.core.somaxconn = 65536
+net.core.rmem_max = 33554432
+net.core.rmem_default = 1048576
+net.core.wmem_max = 33554432
+net.core.wmem_default = 1048576
 net.ipv4.tcp_rmem = 8192 87380 4194304
 net.ipv4.tcp_wmem = 8192 87380 4194304
-net.ipv4.tcp_mem = 65536 1048576 16777216
-net.ipv4.udp_mem = 65536 1048576 16777216
+net.ipv4.tcp_mem = 65536 1048576 33554432
+net.ipv4.udp_mem = 65536 1048576 33554432
 net.ipv4.tcp_ecn = 1
-net.ipv4.tcp_notsent_lowat = 16384
+net.ipv4.tcp_notsent_lowat = 32768
 net.ipv4.tcp_congestion_control = bbr
 net.ipv4.tcp_fastopen = 3
 net.ipv4.tcp_fin_timeout = 25
@@ -22,19 +26,39 @@ net.ipv4.tcp_max_syn_backlog = 20480
 net.ipv4.tcp_max_tw_buckets = 1440000
 net.ipv4.tcp_mtu_probing = 1
 net.ipv4.tcp_retries2 = 8
+net.ipv4.tcp_sack = 1
+net.ipv4.tcp_dsack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_window_scaling = 1
+net.ipv4.tcp_adv_win_scale = -2
+net.ipv4.tcp_ecn_fallback = 1
+net.ipv4.tcp_syncookies = 1
+net.ipv4.conf.default.rp_filter = 2
+net.ipv4.conf.all.rp_filter = 2
+net.ipv4.conf.all.accept_source_route = 0
+net.ipv4.conf.default.accept_source_route = 0
+net.ipv4.conf.default.arp_announce = 2
+net.ipv4.conf.lo.arp_announce = 2
+net.ipv4.conf.all.arp_announce = 2
+net.ipv4.neigh.default.gc_thresh1 = 512
+net.ipv4.neigh.default.gc_thresh2 = 2048
+net.ipv4.neigh.default.gc_thresh3 = 16384
+net.ipv4.neigh.default.gc_stale_time = 60
 net.ipv4.ip_forward = 1
-net.unix.max_dgram_qlen = 50
+net.unix.max_dgram_qlen = 256
 vm.min_free_kbytes = 65536
-vm.swappiness=10
-vm.vfs_cache_pressure=50
+vm.swappiness = 10
 fs.file-max = 67108864
+vm.vfs_cache_pressure = 250
+kernel.panic = 1
+vm.dirty_ratio = 20
+
 # Turn off IPv6
 net.ipv6.conf.default.disable_ipv6 = 1
 net.ipv6.conf.lo.disable_ipv6 = 1
 net.ipv6.conf.all.disable_ipv6 = 1
 net.ipv6.conf.eth0.disable_ipv6 = 1
+
 # Windows OS Fingerprint
 # net.ipv4.tcp_timestamps = 0
 # net.ipv4.tcp_window_scaling = 0
